@@ -10,6 +10,7 @@ import dev.vansen.fastwarps.commands.WarpCommand;
 import dev.vansen.fastwarps.tabcompleters.WarpTabCompleter;
 import org.bukkit.plugin.java.JavaPlugin;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class FastWarps extends JavaPlugin {
@@ -25,18 +26,18 @@ public class FastWarps extends JavaPlugin {
                 .register();
 
         CommandRegistrar.command("setwarp", new SetWarpCommand())
-                .aliases(List.of("sw", "swarp", "setw", "setwar"))
+                .aliases(Arrays.asList("sw", "swarp", "setw", "setwar"))
                 .permission("fastwarps.setwarp")
                 .register();
 
         CommandRegistrar.command("delwarp", new DelWarpCommand())
-                .aliases(List.of("dw", "dewarp", "delw", "delwar"))
+                .aliases(Arrays.asList("dw", "dewarp", "delw", "delwar"))
                 .permission("fastwarps.delwarp")
                 .completer(new WarpTabCompleter())
                 .register();
 
         CommandRegistrar.command("delallwarps", new DelAllWarpsCommand())
-                .aliases(List.of("daw", "delallwarp"))
+                .aliases(Arrays.asList("daw", "delallwarp"))
                 .permission("fastwarps.delallwarp")
                 .register();
     }
